--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,35 +1,46 @@
 name: earthquake_app
-description: A new Flutter project.
-publish_to: 'none'
+description: A new Flutter project to track earthquakes.
+
+publish_to: "none"
+
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.5 <4.0.0'
+  sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+
   cupertino_icons: ^1.0.2
-  intl:
-  provider:
-  http:
-  geolocator:
-  geocoding:
-  flutter_easyloading:
-  gap:
+  geolocator: ^13.0.2
+  geocoding: ^3.0.0
+  http: ^1.3.0
+  provider: ^6.1.2
+  lottie: ^2.7.0
+  flutter_easyloading: ^3.0.5
+  gap: ^3.0.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
-  flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^3.0.2
+  flutter_launcher_icons: ^0.14.4
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/images/
 
-flutter_icons:
+  assets:
+    - assets/animations/loading.json
+
+flutter_launcher_icons:
+  image_path: "earthquake_logo.png"
   android: true
   ios: true
-  image_path: "assets/images/earthquake_logo.png"
+  macos:
+    generate: true
+  windows:
+    generate: true
+  linux:
+    generate: true
