--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   geocoding:
   flutter_easyloading:
   gap:
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.1
+  flutter_map_marker_cluster: ^1.3.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -52,6 +55,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.1
+  mockito: ^5.4.2
+  build_runner: ^2.4.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
