--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,9 +6,9 @@ plugins {
 }
 
 android {
-    namespace = "com.example.earthquake_app"
+    namespace = "com.aditya.earthquake_app"
     compileSdk = 35
-    ndkVersion = "25.1.8937393"
+    ndkVersion = "26.1.10909125"
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_17
@@ -21,11 +21,11 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.earthquake_app"
+        applicationId = "com.aditya.earthquake_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = 23
-        targetSdk = 33
+        minSdkVersion = flutter.minSdkVersion
+        targetSdk = 35
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
