--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
-//    ext.kotlin_version = "1.5.13"
+    ext.kotlin_version = "2.1.0"
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
         // Update this line to use the latest or required Android Gradle plugin version
-        classpath 'com.android.tools.build:gradle:8.0.2' // Use the appropriate version here
+        classpath 'com.android.tools.build:gradle:8.6.0'
     }
 }
 allprojects {
