--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: earthquake_app
-description: A new Flutter project.
+description: Open-source earthquake tracker using USGS earthquake data.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -44,6 +44,7 @@ dependencies:
   gap:
   flutter_map: ^6.1.0
   latlong2: ^0.9.1
+  connectivity_plus: ^5.0.2
   flutter_map_marker_cluster: ^1.3.6
 dev_dependencies:
   flutter_test:
@@ -57,6 +58,7 @@ dev_dependencies:
   flutter_lints: ^3.0.1
   mockito: ^5.4.2
   build_runner: ^2.4.6
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -99,3 +101,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_icons:
+  android: true
+  ios: false
+  image_path: "assets/icon/app_icon3.png"
+  min_sdk_android: 21
