--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,6 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
+#org.gradle.jvmargs=-Xmx2G
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.java.home=C:/Program Files/Java/jdk-17
+#org.gradle.daemon=false
+#org.gradle.java.home=C:/Program Files/Java/jdk-17
