--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,13 +1,18 @@
 pluginManagement {
-    def flutterSdkPath = {
-        def properties = new Properties()
-        file("local.properties").withInputStream { properties.load(it) }
-        def flutterSdkPath = properties.getProperty("flutter.sdk")
-        assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
-        return flutterSdkPath
-    }()
+    def flutterSdkPath = System.getenv("FLUTTER_ROOT")
 
-    includeBuild("$flutterSdkPath/packages/flutter_tools/gradle")
+    if (flutterSdkPath == null) {
+        def properties = new Properties()
+        def localProperties = file("local.properties")
+        if (localProperties.exists()) {
+            localProperties.withInputStream { properties.load(it) }
+            flutterSdkPath = properties.getProperty("flutter.sdk")
+        }
+    }
+
+    assert flutterSdkPath != null : "Flutter SDK not found. Set FLUTTER_ROOT or flutter.sdk in local.properties"
+
+    includeBuild("${flutterSdkPath}/packages/flutter_tools/gradle")
 
     repositories {
         google()
@@ -15,6 +20,7 @@ pluginManagement {
         gradlePluginPortal()
     }
 }
+
 
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
