--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,9 +32,14 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            // F-Droid will sign the APK itself.
+            // We only apply a signingConfig if you are building locally and have a key.
+            if (project.rootProject.file('key.properties').exists()) {
+                signingConfig signingConfigs.release
+            } else {
+                // This prevents the build from crashing on F-Droid's server
+                signingConfig = null
+            }
         }
     }
 }
