--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,10 @@
 org.gradle.jvmargs=-Xmx2G -XX:MaxMetaspaceSize=512m
 android.useAndroidX=true
 android.enableJetifier=true
+
+#org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
+#org.gradle.jvmargs=-Xmx2G
+#android.useAndroidX=true
+#android.enableJetifier=true
+#org.gradle.daemon=false
+#org.gradle.java.home=C:/Program Files/Java/jdk-17
